# defineif

./: .pre-commit-config.yaml  404.html  CNAME  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
CHANGLOG/: index.html
authors/: index.html
contributing/: index.html
docs/: CHANGLOG.md  contributing.md
search/: search_index.json
src/defineif/: __init__.py  defineif.py  meta.py
tests/: test_defineif.py
